--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,232 +12,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# testing set\n",
-    "data_test = pd.read_csv('religious_text_test.csv')"
+    "# 1. Data Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training set \n",
+    "# read data\n",
+    "data_test = pd.read_csv('religious_text_test.csv')\n",
     "data_train = pd.read_csv('religious_text_train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill missing values\n",
+    "data_train[:] = data_train.fillna(0)\n",
+    "data_test[:] = data_test.fillna(0)\n",
+    "\n",
+    "# rename the unnamed column to Chapters, '# foolishness' to just foolishness\n",
+    "data_train.rename(columns = {'Unnamed: 0' : 'Chapters'}, inplace = True)\n",
+    "data_test.rename(columns = {'# foolishness' : 'foolishness'}, inplace = True)\n",
+    "\n",
+    "# make sure everything is an integer\n",
+    "data_test = data_test.applymap(int).astype(int)\n",
+    "data_train.iloc[:, 1:] = data_train.iloc[:, 1:].applymap(int).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th># foolishness</th>\n",
-       "      <th>hath</th>\n",
-       "      <th>wholesome</th>\n",
-       "      <th>takest</th>\n",
-       "      <th>feelings</th>\n",
-       "      <th>anger</th>\n",
-       "      <th>vaivaswata</th>\n",
-       "      <th>matrix</th>\n",
-       "      <th>kindled</th>\n",
-       "      <th>convict</th>\n",
-       "      <th>...</th>\n",
-       "      <th>erred</th>\n",
-       "      <th>thinkest</th>\n",
-       "      <th>modern</th>\n",
-       "      <th>reigned</th>\n",
-       "      <th>sparingly</th>\n",
-       "      <th>visual</th>\n",
-       "      <th>thoughts</th>\n",
-       "      <th>illumines</th>\n",
-       "      <th>attire</th>\n",
-       "      <th>explains</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 8266 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   # foolishness  hath  wholesome  takest  feelings  anger  vaivaswata  \\\n",
-       "0              0     0          0       0         0      0           0   \n",
-       "1              0     0          0       0         0      0           0   \n",
-       "2              0     0          0       0         0      0           0   \n",
-       "3              0     0          0       0         0      0           0   \n",
-       "4              0     0          0       0         0      0           0   \n",
-       "\n",
-       "   matrix  kindled  convict  ...  erred  thinkest  modern  reigned  sparingly  \\\n",
-       "0       0        0        0  ...      0         0       0        0          0   \n",
-       "1       0        0        0  ...      0         0       0        0          0   \n",
-       "2       0        0        0  ...      0         0       0        0          0   \n",
-       "3       0        0        0  ...      0         0       0        0          0   \n",
-       "4       0        0        0  ...      0         0       0        0          0   \n",
-       "\n",
-       "   visual  thoughts  illumines  attire  explains  \n",
-       "0       0         0          0       0         0  \n",
-       "1       0         0          0       0         0  \n",
-       "2       0         0          0       0         0  \n",
-       "3       0         0          0       0         0  \n",
-       "4       0         0          0       0         0  \n",
-       "\n",
-       "[5 rows x 8266 columns]"
+       "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_test.head()"
+    "# Data validation stuff, more cleaning\n",
+    "\n",
+    "all(data_train.iloc[:,1:].dtypes == 'int64') # True (All entries are integers)\n",
+    "all(data_test.dtypes == 'int64') # True (All entries are integers)\n",
+    "\n",
+    "all(list(map(lambda a: ' ' not in a, data_train.iloc[:,1:].columns))) # Each column is one word\n",
+    "all(list(map(lambda a: ' ' not in a, data_test.columns))) # Each column is one word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Extraaaaaa way of getting the books lmao, dont do this\n",
+    "books = [i[0] for i in list(map(lambda a: a.split('_'), data_train['Chapters'].unique())) if i[1] == 'Ch1']\n",
+    "\n",
+    "# dataframes segregated by chapters\n",
+    "book_list = [data_train[[j in i for i in data_train['Chapters']]] for j in books]\n",
+    "\n",
+    "# top 20 words for each book in a list containing 8 series\n",
+    "top_20_books = [j.sort_values(ascending = False) for j in [i.iloc[:,1:].sum() for i in book_list]]\n",
+    "total_words_each = [i.sum() for i in top_20_books]\n",
+    "\n",
+    "# Series for each book (Top 20 Words)\n",
+    "buddhism_20 = top_20_books[0]; tao_20 = top_20_books[1]\n",
+    "upanishad_20 = top_20_books[2]; yoga_20 = top_20_books[3]\n",
+    "proverb_20 = top_20_books[4]; ecclesiastes_20 = top_20_books[5]\n",
+    "eccleasiasticus_20 = top_20_books[6]; wisdom_20 = top_20_books[7]\n",
+    "\n",
+    "# Top 20 words for all books\n",
+    "all_20 = data_train.iloc[:,1:].sum().sort_values(ascending = False).sum()\n",
+    "total_words = all_20.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60609"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train.head()"
    ]
   },
   {
@@ -264,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
