--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "0.8999999761581421"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,110 +189,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buddhist_score = sum([analyze_sentiment(buddhism_20[:20].index.tolist()[i]) * buddhism_20[i] for i in range(20)]) / sum(buddhism_20[:20].tolist())\n",
+    "tao_score = sum([analyze_sentiment(tao_20[:20].index.tolist()[i]) * tao_20[i] for i in range(20)]) / sum(tao_20[:20].tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document sentiment score: 0.30000001192092896\n",
-      "Document sentiment magnitude: 0.30000001192092896\n",
-      "Document sentiment score: 0.30000001192092896\n",
-      "Document sentiment magnitude: 0.30000001192092896\n",
-      "Document sentiment score: 0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: -0.6000000238418579\n",
-      "Document sentiment magnitude: 0.6000000238418579\n",
-      "Document sentiment score: 0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: -0.20000000298023224\n",
-      "Document sentiment magnitude: 0.20000000298023224\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: -0.30000001192092896\n",
-      "Document sentiment magnitude: 0.30000001192092896\n",
-      "Document sentiment score: 0.30000001192092896\n",
-      "Document sentiment magnitude: 0.30000001192092896\n",
-      "Document sentiment score: 0.5\n",
-      "Document sentiment magnitude: 0.5\n",
-      "Document sentiment score: 0.20000000298023224\n",
-      "Document sentiment magnitude: 0.20000000298023224\n",
-      "Document sentiment score: 0.4000000059604645\n",
-      "Document sentiment magnitude: 0.4000000059604645\n",
-      "Document sentiment score: 0.5\n",
-      "Document sentiment magnitude: 0.5\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.6000000238418579\n",
-      "Document sentiment magnitude: 0.6000000238418579\n",
-      "Document sentiment score: 0.4000000059604645\n",
-      "Document sentiment magnitude: 0.4000000059604645\n",
-      "Document sentiment score: 0.20000000298023224\n",
-      "Document sentiment magnitude: 0.20000000298023224\n",
-      "Document sentiment score: -0.4000000059604645\n",
-      "Document sentiment magnitude: 0.4000000059604645\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.30000001192092896\n",
-      "Document sentiment magnitude: 0.30000001192092896\n",
-      "Document sentiment score: 0.8999999761581421\n",
-      "Document sentiment magnitude: 0.8999999761581421\n",
-      "Document sentiment score: -0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.8999999761581421\n",
-      "Document sentiment magnitude: 0.8999999761581421\n",
-      "Document sentiment score: 0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.20000000298023224\n",
-      "Document sentiment magnitude: 0.20000000298023224\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: -0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.20000000298023224\n",
-      "Document sentiment magnitude: 0.20000000298023224\n",
-      "Document sentiment score: 0.800000011920929\n",
-      "Document sentiment magnitude: 0.800000011920929\n",
-      "Document sentiment score: -0.10000000149011612\n",
-      "Document sentiment magnitude: 0.10000000149011612\n",
-      "Document sentiment score: 0.0\n",
-      "Document sentiment magnitude: 0.0\n",
-      "Document sentiment score: 0.30000001192092896\n",
-      "Document sentiment magnitude: 0.30000001192092896\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'tao' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-ef1db0d028ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbuddhist_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0manalyze_sentiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuddhism_20\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mbuddhism_20\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuddhism_20\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtao_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0manalyze_sentiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtao_20\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtao_20\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtao\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'tao' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.12714171554562184"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "buddhist_score = sum([analyze_sentiment(buddhism_20[:20].index.tolist()[i]) * buddhism_20[i] for i in range(20)]) / sum(buddhism_20[:20].tolist())\n",
-    "tao_score = sum([analyze_sentiment(tao_20[:20].index.tolist()[i]) * tao_20[i] for i in range(20)]) / sum(tao[:20].tolist())\n"
+    "buddhist_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12188365487923583"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tao_score"
    ]
   },
   {
