--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -158,18 +158,13 @@
     "# function to calculate sentiment scores\n",
     "book_scores = list(map((lambda j: sum([scores_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
     "magnitude_scores = list(map((lambda j: sum([magnitude_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
+    "top_20_scores = list(map((lambda j: sum([scores_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
+    "top_20_magnitude = list(map((lambda j: sum([magnitude_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
+    "\n",
+    "scores_20 = \n",
+    "magnitude_20 = \n",
     "book_scores_dict = dict(zip(books,list(book_scores)))\n",
     "book_magnitude_dict = dict(zip(books,list(magnitude_scores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentiments.seek(0)\n",
-    "for i in "
    ]
   },
   {
