--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,11 +158,11 @@
     "# function to calculate sentiment scores\n",
     "book_scores = list(map((lambda j: sum([scores_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
     "magnitude_scores = list(map((lambda j: sum([magnitude_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
-    "top_20_scores = list(map((lambda j: sum([scores_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
-    "top_20_magnitude = list(map((lambda j: sum([magnitude_dict[k] * j[i] for i,k in enumerate(j.index.tolist())]) / sum(j.tolist())), top_20_books))\n",
+    "top_20_scores = list(map((lambda j: sum([scores_dict[k] * j[:20][i] for i,k in enumerate(j[:20].index.tolist())]) / sum(j[:20].tolist())), top_20_books))\n",
+    "top_20_magnitude = list(map((lambda j: sum([magnitude_dict[k] * j[:20][i] for i,k in enumerate(j[:20].index.tolist())]) / sum(j[:20].tolist())), top_20_books))\n",
     "\n",
-    "scores_20 = \n",
-    "magnitude_20 = \n",
+    "scores_20 = dict(zip(books,list(top_20_scores)))\n",
+    "magnitude_20 = dict(zip(books,list(top_20_magnitude)))\n",
     "book_scores_dict = dict(zip(books,list(book_scores)))\n",
     "book_magnitude_dict = dict(zip(books,list(magnitude_scores)))"
    ]
@@ -225,8 +225,61 @@
     }
    ],
    "source": [
-    "book_scores_dict\n",
-    "#plt.plot(book_scores_dict.keys(),book_scores_dict.values())"
+    "book_scores_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Buddhism': 0.12714171554562184,\n",
+       " 'TaoTeChing': 0.12188365487923583,\n",
+       " 'Upanishad': 0.185788385794185,\n",
+       " 'YogaSutra': 0.29939333488458447,\n",
+       " 'BookOfProverb': 0.2113649379536467,\n",
+       " 'BookOfEcclesiastes': 0.1680791009280641,\n",
+       " 'BookOfEccleasiasticus': 0.21494290865896964,\n",
+       " 'BookOfWisdom': 0.20057537840514245}"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Buddhism': 0.2459567718154149,\n",
+       " 'TaoTeChing': 0.24016620511823744,\n",
+       " 'Upanishad': 0.2505186763495454,\n",
+       " 'YogaSutra': 0.3062689669385055,\n",
+       " 'BookOfProverb': 0.291319248413849,\n",
+       " 'BookOfEcclesiastes': 0.25000000458821064,\n",
+       " 'BookOfEccleasiasticus': 0.24665579735795204,\n",
+       " 'BookOfWisdom': 0.20655926802250266}"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "magnitude_20"
    ]
   },
   {
